# apiminio

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  skaffold.yaml
.github/workflows/: on-release-main.yml
docs/: index.md  modules.md
examples/: mcp_min.py  min.py  minimal.py
k8s/apiminio/template/: deployment.yaml  ingress.yaml  service.yaml
k8s/minio/: deployment.yaml  ingress.yaml  service.yaml
modules/: index.html
search/: search_index.json
src/apiminio/: __init__.py  main.py  minio.pyi
tests/: test_foo.py  test_main.py
